Fix broken top wrapper spacing in sites page.

--- a/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
@@ -324,6 +324,10 @@
 			}
 		}
 
+		.a4a-layout__top-wrapper {
+			padding: 0;
+		}
+
 		.a4a-layout__top-wrapper,
 		.a4a-layout__body {
 			> * {
